# Breakout3D

./: .gitignore  CMakeLists.txt  GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat  HotReload_vs2019.bat  HotReload_vs2022.bat  README.md  RunClient_Debug.bat  RunClient_MinSizeRel.bat  RunClient_RelWithDebInfo.bat  RunClient_Release.bat  RunRunner3D_Debug.bat  RunRunner3D_MinSizeRel.bat  RunRunner3D_RelWithDebInfo.bat  RunRunner3D_Release.bat  RunUIMaker_Debug.bat  RunUIMaker_MinSizeRel.bat  RunUIMaker_RelWithDebInfo.bat  RunUIMaker_Release.bat
Breakout3D/Inc/: Assertion.h  FrameBuffer.h  GeometryGenerator.h  Macro.h  PostEffectPass.h  Shader.h  ShadowMap.h  Skybox.h  SkyboxPass.h  StaticMesh.h  Texture2D.h  Vector.h  Vertex.h
Breakout3D/Src/: FrameBuffer.cpp  GeometryGenerator.cpp  Main.cpp  PostEffectPass.cpp  RenderManager.cpp  SDLManager.cpp  Shader.cpp  ShadowMap.cpp  Skybox.cpp  SkyboxPass.cpp  StaticMesh.cpp  Texture2D.cpp
Client/: CMakeLists.txt
Client/Script/: RunClient.bat
Client/Shader/: Shader.frag  Shader.vert
Client/Source/: Main.cpp
GameEngine/: CMakeLists.txt
GameEngine/CrashModule/Src/: CrashModule.cpp
GameEngine/FileModule/: CMakeLists.txt
GameEngine/FileModule/Inc/: FileModule.h
GameEngine/FileModule/Src/: FileModule.cpp
GameEngine/Include/: IApplication.h  LightPass.h  PostEffectPass.h  ShadowPass.h  Vertex.h
GameEngine/Include/Core/: AudioManager.h  GameTimer.h  IApplication.h  IManager.h  InputManager.h  ObjectManager.h  RenderManager.h  ResourceManager.h  ShaderManager.h  Vertex.h  Window.h
GameEngine/Include/Macro/: Assertion.h  GLAssertion.h  WindowsAssertion.h
GameEngine/Include/Matrix/: Matrix2x2.h  Matrix3x3.h  Matrix4x4.h
GameEngine/Include/Object/: Camera3D.h  IObject.h
GameEngine/Include/Resource/: IResource.h  Sound.h  TTFont.h
GameEngine/Include/Shader/: Shader.h
GameEngine/Include/Utils/: CommandLineUtils.h  ErrorUtils.h  GeometryGenerateUtils.h  MathUtils.h  WindowClassUtils.h  WindowsCrashUtils.h
GameEngine/MathModule/: CMakeLists.txt
GameEngine/MathModule/Inc/: Mat2x2.h  Mat3x3.h  Mat4x4.h  MathModule.h  Quat.h  Vec2.h  Vec3.h  Vec4.h
GameEngine/MathModule/Src/: Quat.inl  Vec2.inl  Vec3.inl  Vec4.inl
GameEngine/Source/: GeometryGenerateUtils.cpp  GeometryPass2D.cpp  GeometryPass2D.h  GeometryPass3D.cpp  GeometryPass3D.h  GlyphPass2D.cpp  GlyphPass2D.h  LightPass.cpp  PostEffectPass.cpp  RenderManager.cpp  ShadowPass.cpp  StaticMesh.cpp  TexturePass2D.cpp  TexturePass2D.h
GameEngine/Source/Core/: AudioManager.cpp  GameTimer.cpp  IApplication.cpp  InputManager.cpp  ObjectManager.cpp  RenderManager.cpp  ResourceManager.cpp  ShaderManager.cpp  Window.cpp
GameEngine/Source/Object/: Camera3D.cpp
GameEngine/Source/Resource/: Sound.cpp  TTFont.cpp
GameEngine/Source/Shader/: Shader.cpp
GameEngine/Source/Utils/: CommandLineUtils.cpp  ErrorUtils.cpp  FileUtils.cpp  GeometryGenerateUtils.cpp  StringUtils.cpp  WindowClassUtils.cpp  WindowsCrashUtils.cpp
GameEngine/UIMaker/: CMakeLists.txt
GameEngine/UIMaker/Script/: RunUIMaker.bat
GameEngine/UIMaker/Source/: Main.cpp
Runner3D/: CMakeLists.txt
Runner3D/Resource/Model/: Human.dae
Runner3D/Script/: RunRunner3D.bat
Runner3D/Source/: Main.cpp
Shader/: HDRPass.frag  LightPass.frag  PostEffectPass.vert  Shader.frag  Shader.geom  Shader.vert  VisualLight.frag
