# CMake의 최소 버전을 명시합니다.
cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(RUNNER3D_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(RUNNER3D_INCLUDE "${RUNNER3D_PATH}/Include")
set(RUNNER3D_SOURCE "${RUNNER3D_PATH}/Source")
set(RUNNER3D_SCRIPT "${RUNNER3D_PATH}/Script")
set(RUNNER3D_SHADER "${RUNNER3D_PATH}/Shader")

set(WINDOW_TITLE "Runner3D")
set(WINDOW_X 100)
set(WINDOW_Y 100)
set(WINDOW_W 1000)
set(WINDOW_H 800)
set(WINDOW_RESIZE 0)
set(WINDOW_FULLSCREEN 0)
set(WINDOW_VSYNC 1)
set(WINDOW_IMGUI 1)
configure_file("${RUNNER3D_INCLUDE}/Config.h.in" "${RUNNER3D_INCLUDE}/Config.h")

file(GLOB_RECURSE RUNNER3D_INCLUDE_FILE "${RUNNER3D_INCLUDE}/*")
file(GLOB_RECURSE RUNNER3D_SOURCE_FILE "${RUNNER3D_SOURCE}/*")
file(GLOB_RECURSE RUNNER3D_SCRIPT_FILE "${RUNNER3D_SCRIPT}/*" )
file(GLOB_RECURSE RUNNER3D_SHADER_FILE "${RUNNER3D_SHADER}/*")

add_executable(Runner3D
    WIN32
    ${RUNNER3D_INCLUDE_FILE}
    ${RUNNER3D_SOURCE_FILE}
    ${RUNNER3D_SCRIPT_FILE}
    ${RUNNER3D_SHADER_FILE}
)

target_include_directories(Runner3D PUBLIC ${RUNNER3D_INCLUDE} ${GAME_ENGINE_INCLUDE})
target_link_libraries(Runner3D PUBLIC GameEngine)

source_group(Include FILES ${RUNNER3D_INCLUDE_FILE})
source_group(Source FILES ${RUNNER3D_SOURCE_FILE})
source_group(Script FILES ${RUNNER3D_SCRIPT_FILE})
source_group(Shader FILES ${RUNNER3D_SHADER_FILE})

set(COMMANDLINE "devMode=on rootPath=\"${CMAKE_SOURCE_DIR}/\"")
set_target_properties(Runner3D PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS ${COMMANDLINE})