# CMake의 최소 버전을 명시합니다.
cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(UIMAKER_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(UIMAKER_INCLUDE "${UIMAKER_PATH}/Include")
set(UIMAKER_SOURCE "${UIMAKER_PATH}/Source")
set(UIMAKER_SCRIPT "${UIMAKER_PATH}/Script")

set(WINDOW_TITLE "UIMaker")
set(WINDOW_X 100)
set(WINDOW_Y 100)
set(WINDOW_W 1000)
set(WINDOW_H 800)
set(WINDOW_RESIZE 0)
set(WINDOW_FULLSCREEN 0)
set(WINDOW_VSYNC 1)
set(WINDOW_IMGUI 1)
configure_file("${UIMAKER_INCLUDE}/Config.h.in" "${UIMAKER_INCLUDE}/Config.h")

file(GLOB_RECURSE UIMAKER_INCLUDE_FILE "${UIMAKER_INCLUDE}/*")
file(GLOB_RECURSE UIMAKER_SOURCE_FILE "${UIMAKER_SOURCE}/*")
file(GLOB_RECURSE UIMAKER_SCRIPT_FILE "${UIMAKER_SCRIPT}/*" )

add_executable(UIMaker WIN32 ${UIMAKER_INCLUDE_FILE} ${UIMAKER_SOURCE_FILE} ${UIMAKER_SCRIPT_FILE} ${UIMAKER_SHADER_FILE})

target_include_directories(UIMaker PUBLIC ${UIMAKER_INCLUDE} ${GAME_ENGINE_INCLUDE})
target_link_libraries(UIMaker PUBLIC GameEngine)

source_group(Include FILES ${UIMAKER_INCLUDE_FILE})
source_group(Source FILES ${UIMAKER_SOURCE_FILE})
source_group(Script FILES ${UIMAKER_SCRIPT_FILE})

set(COMMANDLINE "devMode=on rootPath=\"${CMAKE_SOURCE_DIR}/\"")
set_target_properties(UIMaker PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS ${COMMANDLINE})